[package]
name = "rsx_macro"
description = "The rsx! macro for Smithy, a framework for building WebAssembly apps"
version = "0.0.7"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
keywords = ["web", "javascript", "webassembly", "wasm", "frontend"]
categories = ["gui", "web-programming"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://www.smithy.rs"
documentation = "https://docs.smithy.rs/rsx_macro"

[dependencies]
smithy_types = { path = "../smithy_types", version = "0.0.7" }
proc-macro2 = { version = "0.4.27", features = ["span-locations"] }
quote = "0.6.10"
nom = "5.0.1"
lazy_static = "1.2.0"
serde = "1.0.94"
serde_json = "1.0.39"
serde_derive = "1.0.94"

[lib]
proc-macro = true