[package]
name = "smd_tests"
description = "Tests for the smd! macro"
license = "MIT/Apache-2.0"
version = "0.0.6"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://github.com/rbalicki2/smithy"
documentation = "https://docs.smithy.rs/smd_tests"

[dependencies]
smd_macro = { path = "../smd_macro", version = "0.0.6" }
smithy_types = { path = "../smithy_types", version = "0.0.6" }
smithy = { path = "../smithy", version = "0.0.6" }
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
web-sys = { version = "0.3.5", features = [] }
shellexpand = "1.0.0"

[workspace]
members = ["."]

[features]
cache-logs = ["smd_macro/cache-logs"]
