[package]
name = "smd_tests"
description = "Tests for the smd! macro"
license = "MIT/Apache-2.0"
version = "0.0.7"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://www.smithy.rs"
documentation = "https://docs.smithy.rs/smd_tests"

[dependencies]
smd_macro = { path = "../smd_macro", version = "0.0.7" }
rsx_macro = { path = "../rsx_macro", version = "0.0.7" }
smithy_types = { path = "../smithy_types", version = "0.0.7" }
smithy = { path = "../smithy", version = "0.0.7" }
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
web-sys = { version = "0.3.5", features = ["console"] }
shellexpand = "1.0.0"

[workspace]
members = ["."]

[features]
cache-logs = ["smd_macro/cache-logs"]
smd-logs = ["smd_macro/smd-logs"]
