[package]
name = "smithy"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"

[dependencies]
smd_macro = { path = "../smd_macro" }
smithy_core = { path = "../smithy_core" }
smithy_types = { path = "../smithy_types" }

[features]
default = ["keyboard-events", "input-events", "focus-events"]
copy-events = ["smithy_core/copy-events", "smithy_types/copy-events"]
keyboard-events = ["smithy_core/keyboard-events", "smithy_types/keyboard-events"]
focus-events = ["smithy_core/focus-events", "smithy_types/focus-events"]
input-events = ["smithy_core/input-events", "smithy_types/input-events"]
mouse-events = ["smithy_core/mouse-events", "smithy_types/mouse-events"]
pointer-events = ["smithy_core/pointer-events", "smithy_types/pointer-events"]
select-events = ["smithy_core/select-events", "smithy_types/select-events"]
touch-events = ["smithy_core/touch-events", "smithy_types/touch-events"]
scroll-events = ["smithy_core/scroll-events", "smithy_types/scroll-events"]
image-events = ["smithy_core/image-events", "smithy_types/image-events"]
animation-events = ["smithy_core/animation-events", "smithy_types/animation-events"]
transition-events = ["smithy_core/transition-events", "smithy_types/transition-events"]
toggle-events = ["smithy_core/toggle-events", "smithy_types/toggle-events"]

debug-logs = ["smithy_core/debug-logs"]
