[package]
name = "smithy"
description = "Smithy, a framework for web development"
version = "0.0.4"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
keywords = ["web", "javascript", "webassembly", "wasm", "frontend"]
categories = ["gui", "web-programming"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://github.com/rbalicki2/smithy"
documentation = "https://docs.smithy.rs/smithy"

[dependencies]
smd_macro = { path = "../smd_macro", version = "0.0.4" }
smithy_core = { path = "../smithy_core", version = "0.0.4" }
smithy_types = { path = "../smithy_types", version = "0.0.4" }

[features]
default = ["keyboard-events", "input-events"]

# dom events
clipboard-events = ["smithy_core/clipboard-events", "smithy_types/clipboard-events"]
keyboard-events = ["smithy_core/keyboard-events", "smithy_types/keyboard-events"]
focus-events = ["smithy_core/focus-events", "smithy_types/focus-events"]
input-events = ["smithy_core/input-events", "smithy_types/input-events"]
mouse-events = ["smithy_core/mouse-events", "smithy_types/mouse-events"]
pointer-events = ["smithy_core/pointer-events", "smithy_types/pointer-events"]
select-events = ["smithy_core/select-events", "smithy_types/select-events"]
touch-events = ["smithy_core/touch-events", "smithy_types/touch-events"]
scroll-events = ["smithy_core/scroll-events", "smithy_types/scroll-events"]
image-events = ["smithy_core/image-events", "smithy_types/image-events"]
animation-events = ["smithy_core/animation-events", "smithy_types/animation-events"]
transition-events = ["smithy_core/transition-events", "smithy_types/transition-events"]
toggle-events = ["smithy_core/toggle-events", "smithy_types/toggle-events"]

# window events
before-unload-events = ["smithy_core/before-unload-events", "smithy_types/before-unload-events"]
hash-change-events = ["smithy_core/hash-change-events", "smithy_types/hash-change-events"]
pop-state-events = ["smithy_core/pop-state-events", "smithy_types/pop-state-events"]
promise-rejection-events = ["smithy_core/promise-rejection-events", "smithy_types/promise-rejection-events"]

all-events = [
  "clipboard-events",
  "keyboard-events",
  "focus-events",
  "input-events",
  "mouse-events",
  "pointer-events",
  "select-events",
  "touch-events",
  "scroll-events",
  "image-events",
  "animation-events",
  "transition-events",
  "toggle-events",

  "before-unload-events",
  "hash-change-events",
  "pop-state-events",
  "promise-rejection-events",
]

browser-logs = ["smithy_core/browser-logs"]
smd-logs = ["smd_macro/smd-logs"]
cache-logs = ["smd_macro/cache-logs"]
