[package]
name = "smithy_core"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
description = "A Rust framework for front-end web development"
edition = "2018"
keywords = ["web", "asmjs", "webasm", "javascript", "webassembly", "wasm"]
categories = ["gui", "web-programming"]
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://github.com/rbalicki2/smithy"

[dependencies]
smd_macro = { path = "../smd_macro" }
smithy_types = { path = "../smithy_types" }
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
web-sys = { version = "0.3.5", features = [
  "Element",
  "HtmlCollection",

  # ui and window element events
  "AnimationEvent",
  "BeforeUnloadEvent",
  "ClipboardEvent",
  "FocusEvent",
  "HashChangeEvent",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "PointerEvent",
  "PopStateEvent",
  "PromiseRejectionEvent",
  "ScrollAreaEvent",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "BeforeUnloadEvent",
] }
js-sys = "0.3.5"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.5"
console_error_panic_hook = "0.1.5"

[features]
copy-events = ["any-ui-events"]
keyboard-events = ["any-ui-events"]
focus-events = ["any-ui-events"]
input-events = ["any-ui-events"]
mouse-events = ["any-ui-events"]
pointer-events = ["any-ui-events"]
select-events = ["web-sys-ui-events"]
touch-events = ["any-ui-events"]
scroll-events = ["any-ui-events"]
image-events = ["web-sys-ui-events"]
animation-events = ["any-ui-events"]
transition-events = ["any-ui-events"]
toggle-events = ["web-sys-ui-events"]
# Private cfg flags... these should probably not be used.
web-sys-ui-events = ["any-ui-events"]
any-ui-events = []
