[package]
name = "smithy_core"
description = "The core Smithy functionality"
license = "MIT/Apache-2.0"
version = "0.0.6"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://www.smithy.rs"
documentation = "https://docs.smithy.rs/smithy_core"

[dependencies]
smithy_types = { path = "../smithy_types", version = "0.0.6" }
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
web-sys = { version = "0.3.5", features = [
  "Element",
  "HtmlCollection",
  "Event",
] }
js-sys = "0.3.5"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.5"

[features]
# dom events
clipboard-events = ["any-ui-events", "web-sys/ClipboardEvent"]
keyboard-events = ["any-ui-events", "web-sys/KeyboardEvent"]
focus-events = ["any-ui-events", "web-sys/FocusEvent"]
input-events = ["any-ui-events", "web-sys/InputEvent"]
mouse-events = ["any-ui-events", "web-sys/MouseEvent"]
pointer-events = ["any-ui-events", "web-sys/PointerEvent"]
select-events = ["web-sys-ui-events"]
touch-events = ["any-ui-events", "web-sys/TouchEvent"]
scroll-events = ["any-ui-events", "web-sys/ScrollAreaEvent"]
image-events = ["web-sys-ui-events"]
animation-events = ["any-ui-events", "web-sys/AnimationEvent"]
transition-events = ["any-ui-events", "web-sys/TransitionEvent"]
toggle-events = ["web-sys-ui-events"]

# global events
before-unload-events = ["web-sys/BeforeUnloadEvent"]
hash-change-events = ["web-sys/HashChangeEvent"]
pop-state-events = ["web-sys/PopStateEvent"]
promise-rejection-events = ["web-sys/PromiseRejectionEvent"]

# Private cfg flags... these should probably not be used by you.
web-sys-ui-events = ["any-ui-events", "web-sys/UiEvent"]
any-ui-events = []

browser-logs = ["web-sys/console"]
event-logs = ["web-sys/console"]
