[package]
name = "smithy_reactor"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
description = "A futures reactor for Smithy"

[dependencies]
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
js-sys = "0.3.5"
web-sys = { version = "0.3.5", features = [
  "console"
] }
