[package]
name = "smithy_types"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"

[dependencies]
web-sys = { version = "0.3.5", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlTemplateElement",
  "Event",
  "UiEvent",
  "ClipboardEvent",
  "KeyboardEvent",
  "InputEvent",
  "FocusEvent",
  "MouseEvent",
  "PointerEvent",
  "TouchEvent",
  "ScrollAreaEvent",
  "AnimationEvent",
  "TransitionEvent",
  "EventTarget",
  "Node",
  "NodeList",
  "console"
] }
enum_derive = "0.1.7"
custom_derive = "0.1.7"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.5"
wasm-bindgen = { version = "0.2.28", features = ["nightly"] }
lazy_static = "1.2.0"
