[package]
name = "smithy_types"
description = "types related to Smithy"
license = "MIT/Apache-2.0"
version = "0.0.2"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://github.com/rbalicki2/smithy"

[dependencies]
web-sys = { version = "0.3.5", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlTemplateElement",
  "Event",
  "UiEvent",
  "ClipboardEvent",
  "KeyboardEvent",
  "InputEvent",
  "FocusEvent",
  "MouseEvent",
  "PointerEvent",
  "TouchEvent",
  "ScrollAreaEvent",
  "AnimationEvent",
  "TransitionEvent",
  "EventTarget",
  "PromiseRejectionEvent",
  "PopStateEvent",
  "HashChangeEvent",
  "BeforeUnloadEvent",
  "Node",
  "NodeList",
  "console"
] }
enum_derive = "0.1.7"
custom_derive = "0.1.7"
futures = "0.1.25"
wasm-bindgen = { version = "0.2.29", features = ["nightly"] }
wasm-bindgen-futures = "0.3.5"
lazy_static = "1.2.0"

[features]
# dom events
copy-events = ["any-ui-events"]
keyboard-events = ["any-ui-events"]
focus-events = ["any-ui-events"]
input-events = ["any-ui-events"]
mouse-events = ["any-ui-events"]
pointer-events = ["any-ui-events"]
select-events = ["web-sys-ui-events"]
touch-events = ["any-ui-events"]
scroll-events = ["any-ui-events"]
image-events = ["web-sys-ui-events"]
animation-events = ["any-ui-events"]
transition-events = ["any-ui-events"]
toggle-events = ["web-sys-ui-events"]

# global events
before-unload-events = []
hash-change-events = []
pop-state-events = []
promise-rejection-events = []

# Private cfg flags... these should probably not be used.
web-sys-ui-events = ["any-ui-events"]
any-ui-events = []
