[package]
name = "smithy_types"
description = "types related to Smithy"
license = "MIT/Apache-2.0"
version = "0.0.7"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://www.smithy.rs"
documentation = "https://docs.smithy.rs/smithy_types"

[dependencies]
web-sys = { version = "0.3.5", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "EventTarget",
  "Node",
  "NodeList",
  "Event",
] }
enum_derive = "0.1.7"
custom_derive = "0.1.7"
futures = "0.1.25"
wasm-bindgen = { version = "0.2.29", features = ["nightly"] }
wasm-bindgen-futures = "0.3.5"
lazy_static = "1.2.0"

[features]
# dom events
clipboard-events = ["any-ui-events", "web-sys/ClipboardEvent"]
keyboard-events = ["any-ui-events", "web-sys/KeyboardEvent"]
focus-events = ["any-ui-events", "web-sys/FocusEvent"]
input-events = ["any-ui-events", "web-sys/InputEvent"]
mouse-events = ["any-ui-events", "web-sys/MouseEvent"]
pointer-events = ["any-ui-events", "web-sys/PointerEvent"]
select-events = ["web-sys-ui-events"]
touch-events = ["any-ui-events", "web-sys/TouchEvent"]
scroll-events = ["any-ui-events", "web-sys/ScrollAreaEvent"]
image-events = ["web-sys-ui-events"]
animation-events = ["any-ui-events", "web-sys/AnimationEvent"]
transition-events = ["any-ui-events", "web-sys/TransitionEvent"]
toggle-events = ["web-sys-ui-events"]

# global events
before-unload-events = ["web-sys/BeforeUnloadEvent"]
hash-change-events = ["web-sys/HashChangeEvent"]
pop-state-events = ["web-sys/PopStateEvent"]
promise-rejection-events = ["web-sys/PromiseRejectionEvent"]

# Private cfg flags... these should probably not be used.
web-sys-ui-events = ["any-ui-events", "web-sys/UiEvent"]
any-ui-events = ["web-sys/Event"]
